fix dark mode link underline

--- a/docs/_sass/_mixins.scss
+++ b/docs/_sass/_mixins.scss
@@ -39,6 +39,7 @@
         @include body-text;
         &:hover {
             text-decoration: underline;
+            text-decoration-color: var(--fg-color-body);
         }
     }
 }
